# CmakeUsage

./: CMakeLists.txt
include/: MyMathLib.h
qml/: qml.qrc
qml/qml/: main.qml
qml/qml/Component/: MyButton.qml
qml/qml/Module/: MyModule.qml
src/: MyMathLib.cpp  main.cpp
src/Use3rdparty/: CMakeLists.txt
src/Use3rdparty/include/: Feature3rdparty.h
src/Use3rdparty/src/: Feature3rdparty.cpp
src/other/: CMakeLists.txt
src/other/include/: Other.h
src/other/src/: Other.cpp
